added click event

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href=".\html\highscores.html">View Highscores</a>
     
     </nav>
-    <h1 class="time">Time:<span id="timerSeconds"></span></h1>
+    <h1 class="time">Time:<span id="timerSeconds">75</span></h1>
     
 </header>
 <Main>
@@ -67,6 +67,8 @@
         <section>
             <h3>All done!</h3>
             <h4>Your final score is </h4>
+            <input placeholder="AB" id="enterName" ></input>
+            <button id="submitName">Submit</button>
         </section>
 
     </div>    
