created a funtion to display first question

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <p> Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
         <button id="start-button">Start Quiz</button>
     </div>  
-    <div class="question-section hidden">
+    <div class="question-section">
         <!-- created sections to contain questions and answers -->
-        <section>
+        <!-- <section>
             <h3>Commonly used data types DO NOT include:</h3>
             <ul>
                 <li><button>A.Strings</button></li>
@@ -63,13 +63,14 @@
                 <li><button>C.Quotes</button></li>
                 <li><button>D.Parentheses</button></li>
             </ul>
-        </section>
+        </section> -->
         <section>
             <h3>All done!</h3>
             <h4>Your final score is </h4>
             <input placeholder="AB" id="enterName" ></input>
-            <button id="submitName">Submit</button>
-        </section>
+            <button id="submitButton">Submit</button>
+            <h5 id="response"></h5>
+        </section> -->
 
     </div>    
 
