--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <li><button>D.Parentheses</button></li>
             </ul>
         </section> -->
-        <section>
+        <!-- <section>
             <h3>All done!</h3>
             <h4>Your final score is </h4>
             <input placeholder="AB" id="enterName" ></input>
             <button id="submitButton">Submit</button>
             <h5 id="response"></h5>
-        </section> -->
+        </section> --> -->
 
     </div>    
 
