--- a/Assets/html/highscores.html
+++ b/Assets/html/highscores.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Highscores</title>
 
-    <!-- Stylesheet Links -->
+    
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Murecho:wght@100;300&family=Open+Sans:wght@300&family=Quicksand:wght@300;400&family=Readex+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- Highscores list and buttons -->
-    <section class="contentBlock leftAlignment highscoresBlock">
+    <section class="mainPage mainScreen highscoresBlock">
         <h1>Highscores</h1>
         <ul id="highscoresList">
             <!-- Highscores list items will be appended here -->
